Make sure the sidebar respects its size with overflow hidden

--- a/assets/css/algolia-woocommerce-instantsearch.css
+++ b/assets/css/algolia-woocommerce-instantsearch.css
@@ -446,7 +446,8 @@
     outline: none; }
 
 #ais-facets {
-  width: 30%; }
+  width: 30%;
+  overflow: hidden; }
   @media (max-width: 768px) {
     #ais-facets {
       right: 0;
